--- a/src/AppBundle/Resources/views/default/index.html.twig
+++ b/src/AppBundle/Resources/views/default/index.html.twig
@@ -221,6 +221,21 @@
           </ul>
         </div>
       </section>
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+        <div class="my-auto">
+          <h2 class="mb-5">Loisirs <a href="{{path('create_loisir') }}">Loisirs</a>
+          </h2>
+          {% for tmp in loisirs %}
+             <a href="{{path('edit_loisir', {'id': tmp.getId() } ) }}">Edit {{ tmp.getName() }}</a><br />
+          {% endfor %}
+          
+         
+          {% for tmp in loisirs %}
+             <a href="{{path('delete_loisir', {'id': tmp.getId() } ) }}">Delete {{ tmp.getName() }}</a><br />
+          {% endfor %}
+           
+        </div>
+      </section>
 
     </div>
 
